# handwrite

./: .gitignore  CMakeLists.txt  README.md  build.bat  opencv.cpp
include/: AngleNet.h  CrnnNet.h  DbNet.h  OcrLite.h  main.h
ncnn_w64dev/include/ncnn/: platform.h
ncnn_w64dev/lib/cmake/ncnn/: ncnn.cmake
ncnn_w64dev/lib/pkgconfig/: ncnn.pc
opencv_mingw/: setup_vars_opencv4.cmd
opencv_mingw/x64/mingw/lib/: OpenCVModules.cmake
output/: ocr.jpg-result.txt  ocr_result.txt  run_test.sh
src/crnn/: CMakeLists.txt  main.cpp
src/dbnet/: CMakeLists.txt  CMakeLists_win.txt  OcrLite.cpp  OcrUtils.cpp  main.cpp
src/handwrite/: CMakeLists.txt  hello.c
src/screen_cut_rec/: OcrLite.cpp  hand_input.cpp  main.cpp
src/write_rec/: OcrLite.cpp  hand_input.cpp
